frontend/src/main/k8s-config/minikube/k8s-deploy.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: demo
  namespace: my-project
  labels:
    run: demo
spec:
  replicas: 2
  revisionHistoryLimit: 2
  template:
    metadata:
      annotations:
        kubernetes.io/change-cause: "Update to demo artifact version 1.1.0 test"
      labels:
        run: demo
    spec:
      containers:
      - name: demo
        image: demo:1.1.0
        ports:
        - containerPort: 9090
          protocol: TCP
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 5
          failureThreshold: 3
          httpGet:
            path: /health
            port: 9090
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
