frontend/src/main/k8s-config/minikube/k8s-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: demo
  namespace: my-project
  labels:
    run: demo
spec:
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
  selector:
    run: demo
