frontend/src/main/k8s-config/minikube/k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: my-project
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: demo.example.local
    http:
      paths:
      - path: /
        backend:
          serviceName: demo
          servicePort: 9090
      - path: /person
        backend:
          serviceName: demo
          servicePort: 9090
      - path: /randomNames
        backend:
          serviceName: demo
          servicePort: 9090
